add update profile route
